# backend/models/paste.go
@@ -5,18 +5,7 @@ type Paste struct {
 	Text        string `json:"text,omitempty"`
 	Files       string `json:"files,omitempty"` // Encrypted JSON array of file URLs
 	Protected   bool   `json:"protected"`
+	PassHash    string `json:"pass_hash,omitempty"`
 	TimeoutUnix int64  `json:"timeoutUnix"`
 	Salt        string `json:"salt,omitempty"`
-}
-
-type CreatePasteRequest struct {
-	Expiry      int    `json:"expiry" binding:"required,min=60,max=604800"`
-	PassProtect bool   `json:"passProtect"`
-	Pass        string `json:"pass"`
-	PasteText   string `json:"pasteText" binding:"required"`
-}
-
-type GetPasteRequest struct {
-	ID   string `json:"id" binding:"required,min=4"`
-	Pass string `json:"pass"`
 }
